Update and slight changes

--- a/2_Football_scraped/selen_intro.ipynb
+++ b/2_Football_scraped/selen_intro.ipynb
@@ -44,6 +44,8 @@
    "source": [
     "# from time import sleep\n",
     "\n",
+    "#THIS IS HOW IT LOOKS LIKE IN SELENIUM 3\n",
+    "\n",
     "website = \"https://www.adamchoi.co.uk/overs/detailed\"\n",
     "path = \"C:\\\\bin\\\\chromedriver.exe\"\n",
     "driver = webdriver.Chrome(path)\n",
